--- a/src/components/DND/DND.module.css
+++ b/src/components/DND/DND.module.css
@@ -1,23 +1,11 @@
 .DND {
     display: flex;
     width: 100%;
-    height: 100dvh;
+    min-height: 100dvh;
     justify-content: center;
     flex-direction: column;
 }
 
 .DND input {
     width: 40px;
-}
-
-.Container {
-    border: 1px solid black;
-    margin: 10px;
-    padding: 10px;
-    border-radius: 10px;
-}
-
-.RadioContainer {
-    display: flex;
-    flex-direction: column;
 }
