--- a/src/components/AddAttackFAB/AddAttackFAB.module.css
+++ b/src/components/AddAttackFAB/AddAttackFAB.module.css
@@ -1,6 +1,6 @@
 .AddAttackFAB {
     display: flex;
-    position: absolute;
+    position: fixed;
     border: 1px solid black;
     border-radius: 50%;
     background-color: black;
@@ -8,4 +8,6 @@
     right: 0;
     margin: 10px;
     cursor: pointer;
+    width: 50px;
+    height: 50px;
 }
