added attack update, added emtpy attack state

--- a/src/components/DND/DND.module.css
+++ b/src/components/DND/DND.module.css
@@ -7,3 +7,12 @@
     position: relative;
     overflow-y: scroll;
 }
+
+.NoAttacksContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    margin: 0px 20px;
+}
