--- a/src/components/AddAttackPopup/AddAttackPopup.module.css
+++ b/src/components/AddAttackPopup/AddAttackPopup.module.css
@@ -23,7 +23,7 @@
     top: 50%;
     transform: translate(-50%, -50%);
     width: 90%;
-    min-height: 50%;
+    padding: 20px;
 }
 
 .TitleContainer {
@@ -53,4 +53,10 @@
 
 .Container input {
     width: 100%;
+}
+
+.AddButton {
+    width: 100px;
+    height: 50px;
+    margin-top: 20px;
 }
