--- a/src/components/Attack/Attack.module.css
+++ b/src/components/Attack/Attack.module.css
@@ -12,6 +12,22 @@
     margin: 10px;
     padding: 10px;
     border-radius: 10px;
+    overflow: hidden;
+}
+
+.CollapsedContent {
+    max-height: 0;
+    opacity: 0;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    transition: all 0.5s ease;
+}
+
+.ExpandedContent {
+    max-height: 1000px;
+    opacity: 1;
+    transition: all 0.5s ease;
 }
 
 .RadioContainer {
