--- a/src/components/DND/DND.module.css
+++ b/src/components/DND/DND.module.css
@@ -2,7 +2,6 @@
     display: flex;
     width: 100%;
     min-height: 100dvh;
-    justify-content: center;
     flex-direction: column;
     position: relative;
     overflow-y: scroll;
@@ -13,6 +12,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100%;
+    height: 100dvh;
     margin: 0px 20px;
 }
