--- a/src/components/AttackList/AttackList.module.css
+++ b/src/components/AttackList/AttackList.module.css
@@ -11,3 +11,21 @@
     height: 100dvh;
     margin: 0px 20px;
 }
+
+.TitleContainer {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    border-bottom: 1px solid #868686;
+}
+
+.TitleContainer p {
+    font-size: 24px;
+    font-weight: bold;
+    margin: 0;
+    margin-left: 10px;
+}
+
+.TitleContainer img {
+    cursor: pointer;
+}
