added damage type to attacks. added elemental adept

--- a/src/components/Attack/Attack.module.css
+++ b/src/components/Attack/Attack.module.css
@@ -80,3 +80,11 @@
     font-size: 0.9em;
     font-style: italic;
 }
+
+.InputContainer {
+    display: flex;
+}
+
+.InputContainer select {
+    margin-left: 10px;
+}
