--- a/src/components/Attack/Attack.module.css
+++ b/src/components/Attack/Attack.module.css
@@ -75,7 +75,7 @@
 }
 
 .FeatureDetail {
-    margin-left: 10px;
+    /* margin-left: 10px; */
     color: #666;
     font-size: 0.9em;
     font-style: italic;
