--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,3 +1,11 @@
 .Home {
     display: flex;
+    flex-direction: column;
+}
+
+.Home button {
+    margin-top: 20px;
+    padding: 10px 20px;
+    font-size: 1rem;
+    cursor: pointer;
 }
