styling fixes. added color to remove button. removed border on container. switched it to box shadow

--- a/src/components/AddAttackPopup/AddAttackPopup.module.css
+++ b/src/components/AddAttackPopup/AddAttackPopup.module.css
@@ -157,6 +157,10 @@ button:hover {
     background: #666;
 }
 
+.RemoveDamageButton {
+    background-color: var(--red);
+}
+
 /* Mobile Responsive Adjustments */
 @media (max-width: 600px) {
     .Overlay {
