--- a/src/components/Attack/Attack.module.css
+++ b/src/components/Attack/Attack.module.css
@@ -12,11 +12,11 @@
 }
 
 .Container {
-    border: 1px solid black;
     margin: 10px;
     padding: 10px;
     border-radius: 10px;
     overflow: hidden;
+    box-shadow: var(--card-shadow);
 }
 
 .RadioContainer {
@@ -86,6 +86,6 @@
     margin-bottom: 5px;
 }
 
-.InputContainer select {
-    margin-left: 10px;
+.RemoveClassButton {
+    background-color: var(--red);
 }
