--- a/src/components/Character/Character.module.css
+++ b/src/components/Character/Character.module.css
@@ -7,11 +7,11 @@
 }
 
 .Container {
-    border: 1px solid black;
     margin: 10px;
     padding: 10px;
     border-radius: 10px;
     overflow: hidden;
+    box-shadow: var(--card-shadow);
 }
 
 .RadioContainer {
@@ -97,4 +97,8 @@
 
 .FeatureContainer {
     margin-top: 10px;
+}
+
+.RemoveClassButton {
+    background-color: var(--red);
 }
